Update markdown-it library to 7.0.0 version; Better detecting DOM node to apply formatting to.

--- a/src/content-scripts/inject.css
+++ b/src/content-scripts/inject.css
@@ -1,12 +1,12 @@
-div[contenteditable="false"]:not(.r4nke-YPqjbf) {
+div[contenteditable="false"].h1U9Be-YPqjbf {
 	display: none;
 }
 
-div[contenteditable="true"]:not(.r4nke-YPqjbf) {
+div[contenteditable="true"].h1U9Be-YPqjbf {
 	display: block;
 }
 
-div[contenteditable="true"]:not(.r4nke-YPqjbf) + div.remarkable {
+div[contenteditable="true"].h1U9Be-YPqjbf + div.remarkable {
 	display: none;
 }
 
